Added version info to jar

--- a/pom.xml
+++ b/pom.xml
@@ -17,29 +17,46 @@
 			<version>0.0.2</version>
 		</dependency>
 	</dependencies>
-	
+
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
 			</plugin>
-			
-			
-		<plugin>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.5.1</version>
-          <configuration>
-            <source>1.8</source>
-            <target>1.8</target>
-            <excludes>
-              <exclude>**/excluded/*.java</exclude>
-            </excludes>
-          </configuration>
-        </plugin>
+
+
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.5.1</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+					<excludes>
+						<exclude>**/excluded/*.java</exclude>
+					</excludes>
+				</configuration>
+			</plugin>
+
+
+			<!-- Store the version information in the Manifest -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>3.0.2</version>
+				<configuration>
+					<archive>
+						<manifest>
+							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+							<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
+						</manifest>
+					</archive>
+				</configuration>
+			</plugin>
+
 		</plugins>
 	</build>
-	
+
 	<description>Support to help with using QuPath together with MATLAB</description>
 	<groupId>qupath</groupId>
 	<version>0.0.1</version>
